menambahkan footer index.html

--- a/index.html
+++ b/index.html
@@ -273,7 +273,35 @@ const tanggal = tanggalText.split('/').reverse().join('-');
     window.resetForm = resetForm;
     window.tampilkanTodolist = tampilkanTodolist;
   </script> 
- 
+  
+ <!-- Remove the container if you want to extend the Footer to full width. -->
+<div class="container my-5">
+
+  <section class="">
+  <!-- Footer -->
+  <footer class="text-center text-white" style="background-color: darkblue;">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: CTA -->
+      <section class="">
+        <p class="d-flex justify-content-center align-items-center">
+        </p>
+      </section>
+      <!-- Section: CTA -->
+    </div>
+    <!-- Grid container -->
+
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: white;">
+         © UJIKOM 2025 ®
+    </div>
+    <!-- Copyright -->
+  </footer>
+  <!-- Footer -->
+</section>
+  
+</div>
+<!-- End of .container -->
 </body>
 
 </html>
