--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   </tbody>
 </table>
 
-<h2 style="color: darkblue; margin-top: 40px;">Tugas Selesai</h2>
+<h2 style="color: darkblue; margin-top: 40px;">Tugas Selesai🌷</h2>
 <table id="completedList" style="width: 100%; margin-top: 10px; border-collapse: collapse;">
   <thead>
     <tr>
