--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@ const tanggal = tanggalText.split('/').reverse().join('-');
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: white;">
-         © UJIKOM 2025 ®
+         © Ujikom 2025 ®
     </div>
     <!-- Copyright -->
   </footer>
