--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
   <button type="submit" class="btn btn-primary" id="tambah">Simpan</button>
   <table id="taskList" style="width: 100%; margin-top: 20px; border-collapse: collapse;">
   <thead>
+    
+    <h2 style="color: darkblue; margin-top: 40px;">TUGAS BELUM SELESAI🌷</h2>
+<table id="completedList" style="width: 100%; margin-top: 10px; border-collapse: collapse;">
+  <thead>
+    
     <tr>
       <th style="padding: 10px; border-bottom: 1px solid #fff;">Tugas</th>
       <th style="padding: 10px; border-bottom: 1px solid #fff;">Prioritas</th>
@@ -106,7 +111,7 @@
   </tbody>
 </table>
 
-<h2 style="color: darkblue; margin-top: 40px;">Tugas Selesai🌷</h2>
+<h2 style="color: darkblue; margin-top: 40px;">TUGAS SELESAI🌷</h2>
 <table id="completedList" style="width: 100%; margin-top: 10px; border-collapse: collapse;">
   <thead>
     <tr>
@@ -279,7 +284,7 @@ const tanggal = tanggalText.split('/').reverse().join('-');
 
   <section class="">
   <!-- Footer -->
-  <footer class="text-center text-white" style="background-color: darkblue;">
+  <footer class="text-center text-white" style="background-color: white;">
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: CTA -->
