Mengubah tampilan bunga index.html

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   <table id="taskList" style="width: 100%; margin-top: 20px; border-collapse: collapse;">
   <thead>
     
-    <h2 style="color: darkblue; margin-top: 40px;">TUGAS BELUM SELESAI🌷</h2>
+    <h2 style="color: darkblue; margin-top: 40px;">TUGAS BELUM SELESAI🥀</h2>
 <table id="completedList" style="width: 100%; margin-top: 10px; border-collapse: collapse;">
   <thead>
     
@@ -111,7 +111,7 @@
   </tbody>
 </table>
 
-<h2 style="color: darkblue; margin-top: 40px;">TUGAS SELESAI🌷</h2>
+<h2 style="color: darkblue; margin-top: 40px;">TUGAS SELESAI🌹</h2>
 <table id="completedList" style="width: 100%; margin-top: 10px; border-collapse: collapse;">
   <thead>
     <tr>
